--- a/MyNetFrame/readme
+++ b/MyNetFrame/readme
@@ -2,3 +2,59 @@ OS:
 	Ubuntu
 IDE:
 	QtCreator
+
+调试笔记：
+03月27号
+1.调试链表程序，发现老是段错误？
+	原因是我把同一个节点同时加入两个链表中，第二个链表修改该节点的prev,next指针，导致
+	第一个链表段错误，切记切记！！！(一个节点在同一时刻只能在一个链表中)
+
+2.程序加锁后，造成死锁的情况？
+	在一个加锁的程序片段中，调用一个使用同样锁的函数调用，导致死锁的情况
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
